@@ -1,3 +1,8 @@
+2010-07-20 14:10:00 GhostlyDeath
+	
+	Strawberry Doom:
+		Enable loading of PWAD DEHACKED Lump (-nointernaldeh to disable)
+
 2010-07-18 14:12:41 GhostlyDeath
 	
 	Strawberry Doom:
